Atualizando a estrutura do menu vertical

--- a/pages.html
+++ b/pages.html
@@ -83,24 +83,64 @@
         </li>
 
         <li class="item-menu">
-            <a href="#" class="icones">
-                <span class="icon-list">
-                    <i class="bi bi-box"></i>
-                </span>
-                <span class="text-list">
-                    Estoque
-                </span>
-            </a>
+            <div class="estoque">
+                <a href="#" class="icones">
+                    <span class="icon-list">
+                        <i class="bi bi-box"></i>
+                    </span>
+                    <span class="text-list">
+                        Estoque
+                    </span>
+                </a>
+
+                <ul class="sub-menu">
+
+                    <li>
+
+                        <a href="#">
+                            Consultar estoque
+                        </a>
+
+                    </li>
+
+                    <li>
+
+                        <a href="#">
+                            Cadastrar estoque
+                        </a>
+
+                    </li>
+            </div>
         </li>
         <li class="item-menu">
-            <a href="#" class="icones">
-                <span class="icon-list">
-                    <i class="bi bi-coin"></i>
-                </span>
-                <span class="text-list">
-                    Financeiro
-                </span>
-            </a>
+            <div class="financeiro">
+                <a href="#" class="icones">
+                    <span class="icon-list">
+                        <i class="bi bi-coin"></i>
+                    </span>
+                    <span class="text-list">
+                        Financeiro
+                    </span>
+                </a>
+
+                <ul class="sub-menu">
+
+                    <li>
+
+                        <a href="#">
+                            Consultar movimento
+                        </a>
+
+                    </li>
+
+                    <li>
+
+                        <a href="#">
+                            Cadastrar movimento
+                        </a>
+
+                    </li>
+            </div>
         </li>
     </ul>
 
