--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <title>Antares</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link rel="shortcut icon" href="assets/alt.svg" type="image/x-icon">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
+    
     <main>
 
         <form action="pages.html">
