--- a/pages.html
+++ b/pages.html
@@ -22,10 +22,10 @@
     <ul class="nav-links">
 
         <li class="item-menu">
-            <a href="#">
-                    <i class="bi bi-house"></i>
+            <a href="#" class="Home">
+                    <i class="bi bi-house home"></i>
                 </span>
-                <span class="text-list">
+                <span class="text-list home">
                     Home
                 </span>
             </a>
@@ -33,9 +33,9 @@
 
 
         <li class="item-menu">
-            <a href="#">
-                    <i class="bi bi-bar-chart"></i>
-                <span class="text-list">
+            <a href="#" class="dashboard">
+                    <i class="bi bi-bar-chart dashboard"></i>
+                <span class="text-list dashboard">
                     Dashboard
                 </span>
             </a>
@@ -43,9 +43,9 @@
 
         <li class="item-menu">
             <div class="icon-li">
-                <a href="#" class="icones">
+                <a href="#" class="icones cliente">
                         <i class="bi bi-file-person"></i>
-                    <span class="text-list">
+                    <span class="text-list cliente">
                         Cliente
                     </span>
                         <i class="bi bi-arrow-down"></i>
@@ -77,9 +77,9 @@
 
         <li class="item-menu">
             <div class="icon-li">
-                <a href="#" class="icones">
+                <a href="#" class="icones estoque">
                         <i class="bi bi-box"></i>
-                    <span class="text-list">
+                    <span class="text-list estoque">
                         Estoque
                     </span>
                         <i class="bi bi-arrow-down"></i>
@@ -106,9 +106,9 @@
         </li>
         <li class="item-menu">
             <div class="icon-li">
-                <a href="#" class="icones">
+                <a href="#" class="icones financeiro">
                         <i class="bi bi-coin"></i>
-                    <span class="text-list">
+                    <span class="text-list financeiro">
                         Financeiro
                     </span>
                         <i class="bi bi-arrow-down"></i>
@@ -135,6 +135,49 @@
         </li>
     </ul>
     </nav>
+
+<div id="conteudo">
+
+
+</div>
+
+<script src="https://code.jquery.com/jquery-3.7.1.min.js" 
+    integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"> 
+</script>
+
+<script>
+
+    $(".home").click(function(){
+
+        $("#conteudo").load("pages/home.html");
+
+    });
+
+    $(".dashboard").click(function(){
+
+        $("#conteudo").load("pages/dashboard.html");
+
+    });
+
+    $(".cliente").click(function(){
+
+        $("#conteudo").load("pages/cliente.html");
+
+    });
+
+    $(".estoque").click(function(){
+
+        $("#conteudo").load("pages/estoque.html");
+
+    });
+
+    $(".financeiro").click(function(){
+
+        $("#conteudo").load("pages/financeiro.html");
+
+    });
+
+</script>
 
 </body>
 
