--- a/pages/cliente.html
+++ b/pages/cliente.html
@@ -33,7 +33,7 @@
                 <div class="form-floating col-12 col-sm-4 mb-3 m-sm-0">
 
                     <input type="text" class="form-control" id="numero"
-                        placeholder="Digite o número sua residência" required disabled>
+                        placeholder="Digite o número sua residência" required>
                     <label for="numero">Digite o número sua residência</label>
 
                 </div>
@@ -123,4 +123,6 @@
         </form>
 
     </form>
+
+    <script> src="/js/cliente.js"</script>
 </div>
