--- a/pages/cliente.html
+++ b/pages/cliente.html
@@ -14,7 +14,7 @@
                 <div class="form-floating col-12 col-sm-8 mb-3 m-sm-0">
 
                     <input type="text" class="form-control" id="cep" placeholder="Digite o seu cep" minlength="8"
-                        maxlength="8" required>
+                        maxlength="8" required data-input>
                     <label for="cep">Digite o seu CEP</label>
 
                 </div>
@@ -25,7 +25,7 @@
                 <div class="form-floating col-12 col-sm-4 mb-3 m-sm-0">
 
                     <input type="text" class="form-control" id="rua" placeholder="Rua" required
-                        disabled>
+                        disabled data-input>
                     <label for="rua">Rua</label>
 
                 </div>
@@ -33,7 +33,7 @@
                 <div class="form-floating col-12 col-sm-4 mb-3 m-sm-0">
 
                     <input type="text" class="form-control" id="numero"
-                        placeholder="Digite o número sua residência" required>
+                        placeholder="Digite o número sua residência" required data-input>
                     <label for="numero">Digite o número sua residência</label>
 
                 </div>
@@ -45,7 +45,7 @@
                 <div class="form-floating col-12 col-sm-4 mb-3 m-sm-0">
 
                     <input type="text" class="form-control" id="complemento"
-                        placeholder="Digite o complemento" required>
+                        placeholder="Digite o complemento" required data-input>
                     <label for="complemento">Digite o complemento</label>
 
                 </div>
@@ -54,7 +54,7 @@
                 <div class="form-floating col-12 col-sm-4 mb-3 m-sm-0">
 
                     <input type="text" class="form-control" id="bairro"
-                        placeholder="Digite o seu bairro" required disabled>
+                        placeholder="Digite o seu bairro" required disabled data-input>
                     <label for="bairro">Digite o seu bairro</label>
 
                 </div>
@@ -65,7 +65,7 @@
                 <div class="form-floating col-12 col-sm-4 mb-3 m-sm-0">
 
                     <input type="text" class="form-control" id="cidade"
-                        placeholder="Digite a sua cidade" required disabled>
+                        placeholder="Digite a sua cidade" required disabled data-input>
                     <label for="cidade">Digite a sua Cidade</label>
 
                 </div>
@@ -73,7 +73,7 @@
 
                 <div class="form-floating col-12 col-sm-4 mb-3 m-sm-0">
 
-                    <select id="estado" class="form-select" required disabled>
+                    <select id="estado" class="form-select" required disabled data-input>
                         <option selected>Estado</option>
                         <option value="AC">Acre</option>
                         <option value="AL">Alagoas</option>
